--- a/package.json
+++ b/package.json
@@ -47,11 +47,13 @@
     "core-js": "^2.5.4",
     "express": "^4.16.3",
     "express-http-proxy": "^1.2.0",
+    "file-saver": "^2.0.0-rc.3",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "material-design-icons": "^3.0.1",
     "moment": "^2.22.2",
+    "ng2-pdf-viewer": "^5.1.2",
     "rxjs": "5.6.0-forward-compat.4",
     "rxjs-compat": "^6.0.0",
     "typescript": "~2.7.2",
